kubernetes/apps/base/bunkerweb-mgmt/ingress-route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: bunkerwebmgmt
  namespace: bunkerweb-mgmt
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`bunkerweb-mgmt.heimelska.co.uk`)
      kind: Rule
      services:
        - name: bunkerwebmgmt
          port: 80
      middlewares:
        - name: default-headers
          namespace: traefik
    - match: Host(`bunkerweb-mgmt.tiny.heimelska.co.uk`)
      kind: Rule
      services:
        - name: bunkerwebmgmt
          port: 80
      middlewares:
        - name: default-headers
          namespace: traefik
  tls:
    secretName: bunkerwebmgmt-ui-tls
